# lowpoly-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lowpoly-engine.cpp  lowpoly-engine.h  vcpkg.json
engine/: CMakeLists.txt
engine/shaders/: camera_fs.glsl  camera_vs.glsl
engine/src/: camera.cpp  camera.h  cube.cpp  cube.h  gui.cpp  gui.h  light.cpp  light.h  lowpoly-engine.cpp  lowpoly-engine.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h  triangle.cpp  triangle.h  utils.cpp  utils.h
sandbox/: CMakeLists.txt
sandbox/src/: config.h  main.cpp
